<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:text="Kilometer:"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/kilometerInput"
        android:layout_marginTop="15sp"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="Umrechnen in:"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginTop="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp">

        <RadioButton
            android:id="@+id/radio_button_meileEnglisch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Englische Meilen (1.609,344 Meter)"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radio_button_meileNautisch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nautische Meilen (1.852 Meter)" />

        <RadioButton
            android:id="@+id/radio_button_meileChinesisch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Chinesische Meilen (500 Meter)" />

    </RadioGroup>


    <Button
        android:id="@+id/umrechnenButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="Umrechnen"
        android:textAlignment="center"
        android:textSize="20sp"
        android:onClick="onUmrechnenButton" />

</LinearLayout>